--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><title>BY LAKSHYA AND PREET   </title>
+    <head><title>BY LAKSHYA AND PREET</title>
     <style>
         body{
             background-color: rgb(0, 0, 0);
@@ -10,6 +10,10 @@
             color: rgb(255, 255, 255);
         }
     </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     </head>
         <body>
             <h1 id="Hello">I hate gamers! LOOSERS!</h1>
